@@ -6,6 +6,7 @@
 // the source code.
 //
 // Copyright 2007      Inge Wallin  <ingwa@kde.org>"
+// Copyright 2008      Jens-Michael Hoffmann <jensmh@gmx.de>
 //
 
 
@@ -16,52 +17,89 @@
 
 #include <QtGui/QImage>
 
-
-ViewParams::ViewParams( )
+class ViewParamsPrivate
 {
-    m_mapTheme = 0;
+public:
+    ViewParamsPrivate();
+    ~ViewParamsPrivate();
 
-    // Show / don't show parameters
-    m_showAtmosphere     = true;
+    GeoSceneDocument *m_mapTheme;
 
-    m_showElevationModel = false;
+    ViewportParams  m_viewport;
 
-    // Other layers
-    m_showGps            = false;
+    // FIXME: We should try to get rid of these two:    
+    Quaternion  m_planetAxisUpdated;
+    int         m_radiusUpdated;
 
-    // Just to have something.  These will be resized anyway.
-    m_canvasImage = new QImage( 10, 10, QImage::Format_ARGB32_Premultiplied );
-    m_coastImage  = new QImage( 10, 10, QImage::Format_ARGB32_Premultiplied );
+    // Parameters that determine the painting
+    // Show/don't show options
+
+    // FIXME: All of these parameters should get stored as a GeoSceneSettings 
+    //        property object in the future instead ...
+    bool        m_showAtmosphere;
+
+    bool        m_showElevationModel;
+    
+    bool        m_showGps; //for gps layer
+
+    // Cached data that will make painting faster.
+    QImage  *m_canvasImage;     // Base image with space and atmosphere
+    QImage  *m_coastImage;      // A slightly higher level image.
+};
+
+ViewParamsPrivate::ViewParamsPrivate()
+    : m_mapTheme( 0 ),
+      m_viewport(),
+      m_planetAxisUpdated(),
+      m_radiusUpdated( 0 ),
+      // Show / don't show parameters
+      m_showAtmosphere( true ),
+      m_showElevationModel( false ),
+      // Other layers
+      m_showGps( false ),
+      // Just to have something.  These will be resized anyway.
+      m_canvasImage( new QImage( 10, 10, QImage::Format_ARGB32_Premultiplied )),
+      m_coastImage( new QImage( 10, 10, QImage::Format_ARGB32_Premultiplied ))
+{
 }
+
+ViewParamsPrivate::~ViewParamsPrivate()
+{
+    delete m_canvasImage;
+    delete m_coastImage;
+}
+
+
+ViewParams::ViewParams()
+    : d( new ViewParamsPrivate )
+{
+}
+
 
 ViewParams::~ViewParams()
 {
-    delete m_canvasImage;
-    m_canvasImage = 0;
-
-    delete m_coastImage;
-    m_coastImage  = 0;
+    delete d;
 }
 
 
 ViewportParams *ViewParams::viewport()
 {
-    return &m_viewport;
+    return &d->m_viewport;
 }
 
 Projection ViewParams::projection() const
 {
-    return m_viewport.projection();
+    return d->m_viewport.projection();
 }
 
 AbstractProjection *ViewParams::currentProjection() const
 {
-    return m_viewport.currentProjection();
+    return d->m_viewport.currentProjection();
 }
 
 void ViewParams::setProjection(Projection newProjection)
 {
-    m_viewport.setProjection( newProjection );
+    d->m_viewport.setProjection( newProjection );
 }
 
 void ViewParams::setMapThemeId( const QString& mapThemeId )
@@ -72,7 +110,7 @@ void ViewParams::setMapThemeId( const QString& mapThemeId )
     if ( !mapTheme ) {
 
         // Check whether the previous theme works 
-        if ( !m_mapTheme ){ 
+        if ( !d->m_mapTheme ){ 
             // Fall back to default theme
             qDebug() << "Falling back to default theme";
             mapTheme = MapThemeManager::loadMapTheme("earth/srtm/srtm.dgml");
@@ -89,18 +127,18 @@ void ViewParams::setMapThemeId( const QString& mapThemeId )
         }
     }
 
-    m_mapTheme = mapTheme;
+    d->m_mapTheme = mapTheme;
 }
 
 GeoSceneDocument *ViewParams::mapTheme()
 {
-    return m_mapTheme; 
+    return d->m_mapTheme; 
 }
 
 void ViewParams::setPropertyValue( const QString &name, bool value )
 {
-    if ( m_mapTheme ) {
-        m_mapTheme->settings()->setPropertyValue( name, value );
+    if ( d->m_mapTheme ) {
+        d->m_mapTheme->settings()->setPropertyValue( name, value );
     }
     else {
         qDebug() << "WARNING: Failed to access a map theme! Property: " << name;
@@ -109,8 +147,8 @@ void ViewParams::setPropertyValue( const QString &name, bool value )
 
 void ViewParams::propertyValue( const QString &name, bool &value )
 {
-    if ( m_mapTheme ) {
-        m_mapTheme->settings()->propertyValue( name, value );
+    if ( d->m_mapTheme ) {
+        d->m_mapTheme->settings()->propertyValue( name, value );
     }
     else {
         value = false;
@@ -120,99 +158,99 @@ void ViewParams::propertyValue( const QString &name, bool &value )
 
 int ViewParams::radius() const
 {
-    return m_viewport.radius();
+    return d->m_viewport.radius();
 }
 
 void ViewParams::setRadius(int newRadius)
 {
-    m_viewport.setRadius( newRadius );
+    d->m_viewport.setRadius( newRadius );
 }
 
 
 Quaternion ViewParams::planetAxis() const
 {
-    return m_viewport.planetAxis();
+    return d->m_viewport.planetAxis();
 }
 
 void ViewParams::setPlanetAxis(const Quaternion &newAxis)
 {
-    m_viewport.setPlanetAxis( newAxis );
+    d->m_viewport.setPlanetAxis( newAxis );
 }
 
 
 void ViewParams::centerCoordinates( double &centerLon, double &centerLat )
 {
-    m_viewport.centerCoordinates( centerLon, centerLat );
+    d->m_viewport.centerCoordinates( centerLon, centerLat );
 }
 
 QImage * ViewParams::canvasImage() const
 {
-    return m_canvasImage;
+    return d->m_canvasImage;
 }
 
 void ViewParams::setCanvasImage( QImage * const image )
 {
-    delete m_canvasImage;
-    m_canvasImage = image;
+    delete d->m_canvasImage;
+    d->m_canvasImage = image;
 }
 
 QImage * ViewParams::coastImage() const
 {
-    return m_coastImage;
+    return d->m_coastImage;
 }
 
 void ViewParams::setCoastImage( QImage * const image )
 {
-    delete m_coastImage;
-    m_coastImage = image;
+    delete d->m_coastImage;
+    d->m_coastImage = image;
 }
 
 int ViewParams::radiusUpdated() const
 {
-    return m_radiusUpdated;
+    return d->m_radiusUpdated;
 }
 
 void ViewParams::setRadiusUpdated( const int radiusUpdated )
 {
-    m_radiusUpdated = radiusUpdated;
+    d->m_radiusUpdated = radiusUpdated;
 }
 
 bool ViewParams::showGps() const
 {
-    return m_showGps;
+    return d->m_showGps;
 }
 
 void ViewParams::setShowGps( bool const showGps )
 {
-    m_showGps = showGps;
+    d->m_showGps = showGps;
 }
 
 bool ViewParams::showElevationModel() const
 {
-    return m_showElevationModel;
+    return d->m_showElevationModel;
 }
 
 void ViewParams::setShowElevationModel( const bool showElevationModel )
 {
-    m_showElevationModel = showElevationModel;
+    d->m_showElevationModel = showElevationModel;
 }
 
 bool ViewParams::showAtmosphere() const
 {
-    return m_showAtmosphere;
+    return d->m_showAtmosphere;
 }
 
 void ViewParams::setShowAtmosphere( const bool showAtmosphere )
 {
-    m_showAtmosphere = showAtmosphere;
+    d->m_showAtmosphere = showAtmosphere;
 }
 
 Quaternion ViewParams::planetAxisUpdated() const
 {
-    return m_planetAxisUpdated;
+    return d->m_planetAxisUpdated;
 }
 
 void ViewParams::setPlanetAxisUpdated( const Quaternion & planetAxisUpdated )
 {
-    m_planetAxisUpdated = planetAxisUpdated;
+    d->m_planetAxisUpdated = planetAxisUpdated;
 }
